# Onborading-AI

./: .env.example  HANDOFF.md  NEXT_SESSION_PROMPT.md  README.md  README_ZH.md  SPEC.MD  _pptx_output.txt  docker-compose.v4.sys.yml  docker-compose.yml  extract_pptx.py  findings.md  fix_summary.pptx  generate_ppts.py  progress.md  task_plan.md  test_report.pptx
audit_reports/: README.md  branch_cleanup_log.md
backend/: db.sqlite3  pyproject.toml
backend/apps/audit/: models.py
backend/apps/audit/migrations/: 0008_alter_auditlog_action.py
backend/apps/chat/: views.py
backend/apps/core/: circuit_breaker.py  middleware.py  permissions.py  validators.py
backend/apps/crawler/: services.py  tasks.py  validators.py  views.py
backend/apps/knowledge/: batch.py  batch_serializers.py  batch_views.py  file_policy.py  models.py  serializers.py  tests_phase3_governance.py  urls.py  views.py
backend/apps/knowledge/migrations/: 0007_alter_document_file_type.py
backend/apps/rag/: pipeline.py
backend/apps/rbac/: views.py
backend/apps/spaces/: admin.py  models.py  permissions.py  tests.py
backend/apps/spaces/migrations/: 0003_organizationmembership.py
backend/apps/users/: models.py  urls.py  views.py
backend/config/settings/: base.py  docker.py
backend/templates/: 500.html
frontend/: Dockerfile  REWRITE_OPTIMIZATION.md  REWRITE_PLAN.md  index.html  nginx.conf  vite.config.ts
test_and_fix_output/: bug_log.md  bugs.json  fix_and_optimization_report.pptx  full_test_report.pptx  generate_ppts.py  run_tests.mjs  run_tests.py  test_loop.md
(+60 files in other folders)
