[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ey-onboarding_ai"
version = "0.1.0"
description = "EY Onboarding AI - RAG-powered chatbot for new employees"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-allauth>=65",
    "django-cors-headers>=4.4",
    "celery>=5.4",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3",
    "docling>=2.5",
    "unstructured>=0.16",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["config*", "apps*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
